# VET

./: LICENSE  README.md
Funktionen/: .gitignore  pyproject.toml
Funktionen/doc/: baum.md  kontext.md  lotto.md  record.md  sortieren.md  zeitrechner.md
Funktionen/docs/: conf.py  index.rst  modules.rst
Funktionen/src/: __init__.py  baum.py  bruch.py  lotto.py  rechenoperator.py  simple_class.py  sortieren.py  sortieren_benchmark.py  temperatur_umrechnung.py  winkel.py  zeitrechner.py
Funktionen/test/: test_baum.py  test_bruch.py  test_lotto.py  test_rechenoperator.py  test_sortieren.py  test_temperatur_umrechnung.py  test_winkel.py  test_zeitrechner.py
PgnParser/: .gitignore  pyproject.toml
PgnParser/doc/: conf.py  example_moves.pgn  index.rst  kontext.md  modules.rst
PgnParser/src/: farbe.py  feld.py  halbzug.py  koordinate.py  pgn_parser.py  pgn_token.py  schachbrett.py  spielstein.py  zugnummer.py
PgnParser/test/: test_farbe.py  test_feld.py  test_halbzug.py  test_koordinate.py  test_pgn_parser.py  test_schachbrett.py  test_spielstein.py  test_token.py  test_zugnummer.py
Rechenbaum/docs/: rechenbaum.md
