[project]
name = "funktionen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[tool.pyrefly]
project-excludes = ["test"]
python-version = "3.14"

[tool.pyrefly.errors]
unannotated-parameter = true
unannotated-return = true

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "sphinx>=9.0.4",
    "sphinx-rtd-theme>=0.5.1",
    "pyrefly>=0.2.0",
]


